<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/default_horizontal_padding"
    android:fitsSystemWindows="true"
    >


    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:titleTextColor="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search_button"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/ic_search"
        app:iconPadding="8dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/media_library_button"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="16dp"
        android:text="@string/mediaLibrary"
        app:icon="@drawable/ic_media_library"
        app:iconPadding="8dp"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_button"
        style="@style/MainMenuButtonStyle"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"
        app:iconPadding="8dp"
        />

</LinearLayout>
