<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/all_layout_background_color"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:navigationIcon="@drawable/ic_arrow_back"
        app:title="@string/settings"
        app:titleTextAppearance="@style/ToolbarTitleText"
        app:navigationIconTint="@color/toolbar_navigation"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_horizontal_padding"
        >

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="21dp"
            android:text="@string/night_theme"
            android:textSize="@dimen/small_text_size"
            app:thumbTint="@color/switch_thumb_color"
            app:trackTint="@color/switch_track_color"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/share_textView"
            style="@style/MaterialTextView"
            android:drawableEnd="@drawable/ic_share"
            android:text="@string/share"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/support_textView"
            style="@style/MaterialTextView"
            android:drawableEnd="@drawable/ic_support"
            android:text="@string/support"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/agreement_textView"
            style="@style/MaterialTextView"
            android:drawableEnd="@drawable/ic_arrow_forward"
            android:text="@string/user_agreement"
            />

    </LinearLayout>

</LinearLayout>